Fix overlapping arrows and layout problem

--- a/app/assets/stylesheets/config/_layout.scss
+++ b/app/assets/stylesheets/config/_layout.scss
@@ -17,7 +17,6 @@
 .l-wrapper-narrow-left {
 
   @include media($medium-screen, $big-screen) {
-    position: absolute;
     left: 50%;
     transform: translateX(-50%);
     margin-left: -($rating-widget-width/2);
